[gd_scene load_steps=10 format=2]

[ext_resource path="res://assets/sprites/cube.png" type="Texture" id=1]
[ext_resource path="res://src/scenes/enemies/CubeEnemy.gd" type="Script" id=2]

[sub_resource type="Shader" id=1]
code = "shader_type canvas_item;
render_mode unshaded;

uniform sampler2D gradient : hint_black;
uniform float mix_amount = 1.0;

vec2 rotateUV(vec2 uv, vec2 pivot, float rotation) {
	float sine = sin(rotation);
	float cosine = cos(rotation);
	
	uv -= pivot;
	uv.x = uv.x * cosine - uv.y * sine;
	uv.y = uv.x * sine + uv.y * cosine;
	uv += pivot;
	
	return uv;
}

void fragment() {
	COLOR.rgb = texture(gradient, rotateUV(UV, vec2(0.5), -1.5708)).rgb;
//	COLOR.a = texture(TEXTURE, UV).a;
}"

[sub_resource type="Gradient" id=2]
offsets = PoolRealArray( 0.292453, 1 )
colors = PoolColorArray( 1, 0.435294, 0.435294, 1, 1, 0, 0, 1 )

[sub_resource type="GradientTexture" id=3]
gradient = SubResource( 2 )
width = 16

[sub_resource type="ShaderMaterial" id=4]
shader = SubResource( 1 )
shader_param/mix_amount = 0.82
shader_param/gradient = SubResource( 3 )

[sub_resource type="RectangleShape2D" id=5]
extents = Vector2( 8, 8 )

[sub_resource type="Animation" id=6]
length = 0.2
step = 0.01
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 0.776471, 0.309804, 0.309804, 1 ), Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Gradient" id=7]
offsets = PoolRealArray( 0, 0.482759, 1 )
colors = PoolColorArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 0 )

[node name="CubeEnemy" type="KinematicBody2D"]
collision_layer = 8
collision_mask = 524289
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
material = SubResource( 4 )
texture = ExtResource( 1 )
centered = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
position = Vector2( 8, 8 )
shape = SubResource( 5 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
playback_speed = 3.0
anims/damage = SubResource( 6 )

[node name="RayCastContainer" type="Node2D" parent="."]
position = Vector2( 8, 0 )

[node name="Bottom" type="RayCast2D" parent="RayCastContainer"]
position = Vector2( 11, 16 )
enabled = true
cast_to = Vector2( 0, 1 )

[node name="Side" type="RayCast2D" parent="RayCastContainer"]
position = Vector2( 8, 8 )
rotation = -1.5708
enabled = true
cast_to = Vector2( 0, 1 )

[node name="CPUParticles2D" type="CPUParticles2D" parent="."]
material = SubResource( 4 )
position = Vector2( 8, 8 )
scale = Vector2( 0.25, 0.25 )
emitting = false
amount = 7
lifetime = 0.75
one_shot = true
explosiveness = 1.0
texture = ExtResource( 1 )
direction = Vector2( 0, -1 )
spread = 63.13
gravity = Vector2( 0, 1000 )
initial_velocity = 201.49
color_ramp = SubResource( 7 )

[node name="Tween" type="Tween" parent="."]

[node name="DamageArea" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="DamageArea"]
visible = false
position = Vector2( 8, 8 )
shape = SubResource( 5 )

[connection signal="body_entered" from="DamageArea" to="." method="_on_DamageArea_body_entered"]
